testdata/invalid/invalid_map_no_close_square.bop
struct Wrong {
    map[string, string hello;
}